--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
     <title>Yağmur'a Hediye</title>
 </head>
 <body class="container">
-  <!-- Pembuat code: https://codepen.io/mdusmanansari/pen/BamepLe -->
+
+    <h1 class="title">Yağmur'dan Sonra Gelen...</h1>
+    <h2 class="subtitle">Yağmur İçin... 💐</h2>
+
     <div class="night"></div>
     <div class="flowers">
       <div class="flower flower--1">
@@ -19,7 +27,7 @@
           <div class="flower__leaf flower__leaf--3"></div>
           <div class="flower__leaf flower__leaf--4"></div>
           <div class="flower__white-circle"></div>
-  
+
           <div class="flower__light flower__light--1"></div>
           <div class="flower__light flower__light--2"></div>
           <div class="flower__light flower__light--3"></div>
@@ -28,7 +36,7 @@
           <div class="flower__light flower__light--6"></div>
           <div class="flower__light flower__light--7"></div>
           <div class="flower__light flower__light--8"></div>
-  
+
         </div>
         <div class="flower__line">
           <div class="flower__line__leaf flower__line__leaf--1"></div>
@@ -39,7 +47,7 @@
           <div class="flower__line__leaf flower__line__leaf--6"></div>
         </div>
       </div>
-  
+
       <div class="flower flower--2">
         <div class="flower__leafs flower__leafs--2">
           <div class="flower__leaf flower__leaf--1"></div>
@@ -47,7 +55,7 @@
           <div class="flower__leaf flower__leaf--3"></div>
           <div class="flower__leaf flower__leaf--4"></div>
           <div class="flower__white-circle"></div>
-  
+
           <div class="flower__light flower__light--1"></div>
           <div class="flower__light flower__light--2"></div>
           <div class="flower__light flower__light--3"></div>
@@ -56,7 +64,7 @@
           <div class="flower__light flower__light--6"></div>
           <div class="flower__light flower__light--7"></div>
           <div class="flower__light flower__light--8"></div>
-  
+
         </div>
         <div class="flower__line">
           <div class="flower__line__leaf flower__line__leaf--1"></div>
@@ -65,7 +73,7 @@
           <div class="flower__line__leaf flower__line__leaf--4"></div>
         </div>
       </div>
-  
+
       <div class="flower flower--3">
         <div class="flower__leafs flower__leafs--3">
           <div class="flower__leaf flower__leaf--1"></div>
@@ -73,7 +81,7 @@
           <div class="flower__leaf flower__leaf--3"></div>
           <div class="flower__leaf flower__leaf--4"></div>
           <div class="flower__white-circle"></div>
-  
+
           <div class="flower__light flower__light--1"></div>
           <div class="flower__light flower__light--2"></div>
           <div class="flower__light flower__light--3"></div>
@@ -82,7 +90,7 @@
           <div class="flower__light flower__light--6"></div>
           <div class="flower__light flower__light--7"></div>
           <div class="flower__light flower__light--8"></div>
-  
+
         </div>
         <div class="flower__line">
           <div class="flower__line__leaf flower__line__leaf--1"></div>
@@ -91,14 +99,14 @@
           <div class="flower__line__leaf flower__line__leaf--4"></div>
         </div>
       </div>
-  
+
       <div class="grow-ans" style="--d:1.2s">
         <div class="flower__g-long">
           <div class="flower__g-long__top"></div>
           <div class="flower__g-long__bottom"></div>
         </div>
       </div>
-  
+
       <div class="growing-grass">
         <div class="flower__grass flower__grass--1">
           <div class="flower__grass--top"></div>
@@ -114,7 +122,7 @@
           <div class="flower__grass__overlay"></div>
         </div>
       </div>
-  
+
       <div class="growing-grass">
         <div class="flower__grass flower__grass--2">
           <div class="flower__grass--top"></div>
@@ -130,19 +138,19 @@
           <div class="flower__grass__overlay"></div>
         </div>
       </div>
-  
+
       <div class="grow-ans" style="--d:2.4s">
         <div class="flower__g-right flower__g-right--1">
           <div class="leaf"></div>
         </div>
       </div>
-  
+
       <div class="grow-ans" style="--d:2.8s">
         <div class="flower__g-right flower__g-right--2">
           <div class="leaf"></div>
         </div>
       </div>
-  
+
       <div class="grow-ans" style="--d:2.8s">
         <div class="flower__g-front">
           <div class="flower__g-front__leaf-wrapper flower__g-front__leaf-wrapper--1">
@@ -172,7 +180,7 @@
           <div class="flower__g-front__line"></div>
         </div>
       </div>
-  
+
       <div class="grow-ans" style="--d:3.2s">
         <div class="flower__g-fr">
           <div class="leaf"></div>
@@ -186,7 +194,7 @@
           <div class="flower__g-fr__leaf flower__g-fr__leaf--8"></div>
         </div>
       </div>
-  
+
       <div class="long-g long-g--0">
         <div class="grow-ans" style="--d:3s">
           <div class="leaf leaf--0"></div>
@@ -201,7 +209,7 @@
           <div class="leaf leaf--3"></div>
         </div>
       </div>
-  
+
       <div class="long-g long-g--1">
         <div class="grow-ans" style="--d:3.6s">
           <div class="leaf leaf--0"></div>
@@ -216,7 +224,7 @@
           <div class="leaf leaf--3"></div>
         </div>
       </div>
-  
+
       <div class="long-g long-g--2">
         <div class="grow-ans" style="--d:4s">
           <div class="leaf leaf--0"></div>
@@ -231,7 +239,7 @@
           <div class="leaf leaf--3"></div>
         </div>
       </div>
-  
+
       <div class="long-g long-g--3">
         <div class="grow-ans" style="--d:4s">
           <div class="leaf leaf--0"></div>
@@ -246,7 +254,7 @@
           <div class="leaf leaf--3"></div>
         </div>
       </div>
-  
+
       <div class="long-g long-g--4">
         <div class="grow-ans" style="--d:4s">
           <div class="leaf leaf--0"></div>
@@ -261,7 +269,7 @@
           <div class="leaf leaf--3"></div>
         </div>
       </div>
-  
+
       <div class="long-g long-g--5">
         <div class="grow-ans" style="--d:4s">
           <div class="leaf leaf--0"></div>
@@ -276,7 +284,7 @@
           <div class="leaf leaf--3"></div>
         </div>
       </div>
-  
+
       <div class="long-g long-g--6">
         <div class="grow-ans" style="--d:4.2s">
           <div class="leaf leaf--0"></div>
@@ -291,7 +299,7 @@
           <div class="leaf leaf--3"></div>
         </div>
       </div>
-  
+
       <div class="long-g long-g--7">
         <div class="grow-ans" style="--d:3s">
           <div class="leaf leaf--0"></div>
