Add star elements to index.html
Added multiple star elements to the HTML structure.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 </head>
 <body>
     
+    <!-- YILDIZLAR EKLENDİ -->
+    <div class="stars">
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+    </div>
+
     <h2 class="subtitle">Yağmur İçin... 💐</h2>
     <h1 class="title">Yağmur'dan Sonra Gelen...</h1>
 
